[gd_scene load_steps=17 format=2]

[ext_resource path="res://minigames/cup_questions/main/main.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://minigames/UI_Reusable/resultScrn.tscn" type="PackedScene" id=3]
[ext_resource path="res://minigames/cup_questions/assets/background.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 82
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/GaramondPremrPro-Smbd.otf"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 2 )

[sub_resource type="Animation" id=11]
resource_name = "cleared_test"
length = 0.3
step = 0.038
tracks/0/type = "value"
tracks/0/path = NodePath("endGame/Panel/Puntos:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.076, 0.114, 0.152, 0.19, 0.228, 0.266, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 598, 395 ), Vector2( 623, 395 ), Vector2( 623, 370 ), Vector2( 623, 395 ), Vector2( 648, 395 ), Vector2( 623, 395 ), Vector2( 623, 420 ), Vector2( 623, 395 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("endGame/Panel/Puntos:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.266 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.12549, 1, 0, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "cleared_test_plus"
length = 0.3
step = 0.038
tracks/0/type = "value"
tracks/0/path = NodePath("endGame/Panel/Puntos:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.076, 0.114, 0.152, 0.19, 0.228, 0.266, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 598, 395 ), Vector2( 623, 395 ), Vector2( 623, 370 ), Vector2( 623, 395 ), Vector2( 648, 395 ), Vector2( 623, 395 ), Vector2( 623, 420 ), Vector2( 623, 395 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("endGame/Panel/Puntos:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.266 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.843137, 0, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "cleared_test"
length = 0.3
step = 0.038
tracks/0/type = "value"
tracks/0/path = NodePath("endGame/Panel/Puntos:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.076, 0.114, 0.152, 0.19, 0.228, 0.266, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 598, 395 ), Vector2( 623, 395 ), Vector2( 623, 370 ), Vector2( 623, 395 ), Vector2( 648, 395 ), Vector2( 623, 395 ), Vector2( 623, 420 ), Vector2( 623, 395 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("endGame/Panel/Puntos:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.266 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "result_scr"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("endGame/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3000, 150 ), Vector2( 250, 150 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "result_scrn_out"
tracks/0/type = "value"
tracks/0/path = NodePath("endGame/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 250, 150 ), Vector2( 3000, 150 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "scoreDefault"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 850, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 3, 3 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 880, 450 ) ]
}

[sub_resource type="Animation" id=8]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 3, 3 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.243137, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 880, 450 ) ]
}

[node name="main" type="CanvasLayer" groups=[
"cupmain",
]]
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 880.0
margin_top = 450.0
margin_right = 992.006
margin_bottom = 550.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_Question" type="Label" parent="."]
visible = false
margin_right = 508.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 9 )
text = "Pregunta 1 de 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -37.0
margin_right = 115.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "Iniciar"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = 53.0
margin_right = 115.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 3 )
text = "Cerrar"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="endGame" parent="." instance=ExtResource( 3 )]

[node name="Puntos" parent="endGame/Panel" index="1"]
margin_left = 598.0
margin_top = 395.0
margin_right = 688.0
margin_bottom = 486.0

[node name="maxPuntos" parent="endGame/Panel" index="2"]
margin_left = 697.0
margin_top = 395.0
margin_right = 875.0
margin_bottom = 486.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cleared_test = SubResource( 11 )
anims/cleared_test_plus = SubResource( 12 )
anims/failed_test = SubResource( 10 )
anims/result_scr = SubResource( 4 )
anims/result_scrn_out = SubResource( 5 )
anims/scoreDefault = SubResource( 6 )
anims/scoreSame = SubResource( 7 )
anims/scoreUp = SubResource( 8 )
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="endGame/Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="endGame/Panel/Button2" to="." method="_on_Button2_pressed"]

[editable path="endGame"]
